fixed zoom issues on mobile

--- a/css/gridtest.css
+++ b/css/gridtest.css
@@ -24,7 +24,7 @@
   font-style: normal;
   font-weight: normal;
   src: local('Gotham Bold'), url('./Fonts/Gotham/GothamBold.woff') format('woff'),
-      local('Gotham Bold'), url('./Fonts/Gotham/GothamBold.woff') format('woff');
+      local('Gotham Bold'), url('./Fonts/Gotham/GothamBold.ttf') format('truetype');
 }
 
 body {
@@ -40,8 +40,8 @@ body {
 .legend {
   color: #d75229;
   font-size: 20px;
-  /* font-size: 2vw; */
-  font-family: 'Gotham Bold';
+  /* font-family: 'Gotham Book'; */
+  font-weight: 'bold';
 }
 
 .container {
@@ -77,7 +77,7 @@ body {
 }
 
 fieldset {
-  padding: 0.1em;
+  padding: 0.5em;
   margin: 0.5em;
   /* border: none; */
 }
@@ -97,6 +97,9 @@ textarea {
   vertical-align: top;
   border-color: lightgray;
   resize: none;
+  -webkit-appearance: none;
+  border-radius: 0;
+  font-size: 16px
 }
 
 #warning {
@@ -104,13 +107,18 @@ textarea {
   font-size: 12px;
   font-weight: bold;
   font-style: italic;
+  margin-top: 0.75em;
 }
 
 label {
   font-size: 16px;
   padding: 0.25em;
   font-family: 'Gotham Book'
-  /* font-size: 1.1vw */
+}
+
+input {
+  -webkit-appearance: none;
+  border-radius: 0;
 }
 
 input[type=submit] {
@@ -122,23 +130,32 @@ input[type=submit] {
   padding: 9px 14px;
   text-transform: uppercase;
   font-style: normal;
-  font-family: "Gotham Bold";
+  /* font-family: "Gotham Bold"; */
   font-weight: bold;
+  margin-bottom: 0.25em;
 }
 
 ::-webkit-input-placeholder {
   color: #777;
-  font-family: 'Gotham Book Italic'
+  font-size: 12px;
+  vertical-align:center;
+  /* font-family: 'Gotham Book Italic' */
 }
 ::-moz-placeholder {
   color: #777;
-  font-family: 'Gotham Book Italic'
+  font-size: 12px;
+  vertical-align:center;
+  /* font-family: 'Gotham Book Italic' */
 }
 :-ms-input-placeholder {
   color: #777;
-  font-family: 'Gotham Book Italic'
+  font-size: 12px;
+  vertical-align:center;
+  /* font-family: 'Gotham Book Italic' */
 }
 ::placeholder {
   color: #777;
-  font-family: 'Gotham Book Italic'
+  font-size: 12px;
+  vertical-align:center;
+  /* font-family: 'Gotham Book Italic' */
 }
